--- a/_config.yml
+++ b/_config.yml
@@ -83,14 +83,16 @@ excerpt_separator:     <!--more-->
 #accent_image:
   #background:          center / cover url(/assets/img/music-cat-no-loop.gif)
   #overlay:             false  
-#accent_color:          rgb(0,174,239)
-accent_color:          rgb(100,100,100)
+#accent_color:          rgb(225, 100, 0) #orange
+#accent_color:          rgb(88, 191, 143) #mint
+accent_color:          rgb(50, 97, 131)
+#accent_color:          rgb(127, 205, 145) #buttons e underline
 #invert_sidebar:      true
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color:           rgb(56,56,55)
+theme_color:           rgb(25,138,230) #I don't know
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/config/#changing-fonts>
@@ -110,13 +112,12 @@ font_code:             JetBrains Mono, Nanum Gothic Coding, Menlo, Monaco, Conso
 defaults:
   # You can use this to provide a default accent color and background for
   # all pages under a given path:
-  # - scope:
-  #     path:            hyde/
-  #   values:
-  #     accent_color:    rgb(38,139,210)
-  #     accent_image:
-  #       background:    rgb(32,32,32)
-  #       overlay:       false
+  - scope:
+      path:            "" #sidebar
+    values:
+      accent_image:
+        background:    rgb(57, 62, 70) #sidebar color
+        overlay:       false
 
   # Don't include documents in assets in the sitemap
   - scope:
@@ -268,7 +269,7 @@ hydejack:
     dynamic:           false
 
     # Set to `true` to allow visitors to switch between light and dark mode.
-    icon:              false
+    icon:              true
 
   # ⚡️ DANGER ZONE ⚡️
   # ----------------
