--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,9 +27,9 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     linkedin:        caue-marcovich
-    itchio:          tallon300
-    gitlab:          happytallon
-    github:          happytallon
+    itchio:          tallonic
+    gitlab:          tallonic
+    github:          cauemarcovich
     steam:           76561197988967891
     email:           srmarcovich@gmail.com
     #stackoverflow:   <code>
