--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -12,14 +12,14 @@ basics:
     If you have any interest on my work, please, don't hesitate to contact me. I'm always looking for meaninful projects. :)
   profiles:
     - network: "LinkedIn"
-      username: "Caue Marcovich"
+      username: "in/caue-marcovich"
       url: "https://www.linkedin.com/in/caue-marcovich/"
     - network: "Itchio"
       username: "tallonic"
       url: "https://tallonic.itch.io/"
     - network: "Gitlab"
       username: "@tallonic"
-      url: "https://gitlab.com/happytallon"
+      url: "https://gitlab.com/tallonic"
     - network: "Github"
       username: "cauemarcovich"
       url: "https://github.com/cauemarcovich"
