--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -5,7 +5,7 @@ basics:
   #picture:  /assets/img/tallonic.gif
   email:    "srmarcovich@gmail.com"
   #phone:    "(+55) 11-96907-6662"
-  whatsapp: "(+55) 11-96907-6662"
+  whatsapp: "+55 11 969076662"
   #website:  "https://cauemarcovich.github.io/"
   linkedin: "https://www.linkedin.com/in/caue-marcovich/"
   summary: |
