--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -35,7 +35,7 @@ work:
     startDate: "2022-11-01"
     endDate: "2023-07-14"
     summary: |
-      Experience as Unity Developer on [**Virtual Town**][virtualtown], a metaverse enviroment for B2B.
+      Experience as a Unity Developer on [**Virtual Town**][virtualtown], a metaverse environment for B2B.
 
       [virtualtown]: /games/virtual-town/
     highlights:
@@ -55,7 +55,7 @@ work:
       [starstrikers]: /games/star-strikers/
     highlights:
       - "Documentation"
-      - "Championship System"
+      - "Championship system"
       - "Bug fixes"
   - company: "Crenix Games"
     position: "Unity Developer"
@@ -109,7 +109,7 @@ awards:
   - title: "Best Educational Game"
     awarder: "Big Festival"
     summary: |
-      [Awarded][aventurasalgodao-award] for the game [**As Aventuras do Capitão Algodão**][aventurasalgodao] by [**Crenix Games**][crenix], which I collaborate as a main programmer.
+      [Awarded][aventurasalgodao-award] for the game [**As Aventuras do Capitão Algodão**][aventurasalgodao] by [**Crenix Games**][crenix], which I collaborated as the main programmer.
       The jury consisted entirely of children from GRAAC.
       
       [crenix]: https://www.linkedin.com/company/crenix-games/
